--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div class="centralizar">
         <label for="massa">Massa:</label>
         <input type="number" id="massa" value="0">
-        <button type="button" onclick="adcionarMassa()">Adicionar Massa</button>
+        <button type="button" onclick="adcionarMassa()">Adicionar Massa <img src="bigorna.png" alt="bigorna" class="icone"> </button>
         <label for="velocidade">Velocidade:</label>
         <input type="number" id="velocidade" value="0">
-        <button type="button" onclick="adcionarVel()">Adicionar Velocidade</button>
-        <button type="button" onclick="subtrairVel()">Subtrair Velocidade</button>
+        <button type="button" onclick="adcionarVel()">Adicionar Velocidade <img src="fast-forward.png" alt="velocidade" class="icone"></button>
+        <button type="button" onclick="subtrairVel()">Subtrair Velocidade <img src="fast-forward.png" alt="velocidade" class="icone"></button>
         <button type="button" onclick="mudarOrbitaDown()">Descer Uma Orbita</button>
         </div>
         <div class="centralizar">
@@ -49,11 +49,11 @@
     <h2>Resultados:</h2>
     <div class="resultado">
         <div class="resultado-item">
-            <h3>Massa</h3>
+            <h3>Massa <img src="bigorna.png" alt="bigorna" class="icone2"></h3>
             <p><span id="resultado-massa">0</span></p>
       </div>
       <div class="resultado-item">
-            <h3>Velocidade</h3>
+            <h3>Velocidade <img src="fast-forward.png" alt="velocidade" class="icone2"></h3>
             <p><span id="resultado-velocidade">0</span></p>
       </div>
 
